...
                                    <constraint firstAttribute="height" constant="21" id="QSh-IN-1T7"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="myURL" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://google.com" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bGy-uZ-RYa" userLabel="my
                                <rect key="frame" x="20" y="101" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Enter the URL you would like to load." identifier="myURL" label="URL to Load"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="a2r-om-RZ4"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pby-gr-tfL">
                                <rect key="frame" x="20" y="139" width="374" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="8ZN-dJ-Zcf"/>
                                </constraints>
                                <segments>
                                    <segment title="UIWebView"/>
                                    <segment title="WKWebView"/>
                                    <segment title="Safari WV"/>
                                </segments>
                                <connections>
                                    <action selector="browserTypeChanged:" destination="kjN-ha-yhK" eventType="valueChanged" id="Hzz-D4-279"/>
                                </connections>
                            </segmentedControl>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="duw-DJ-egn">
                                <rect key="frame" x="20" y="175" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" hint="Sets whether cookies should be on or off." identifier="cbCookies" label="Cookies Enabled Radio Button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="fDN-B3-njJ"/>
                                </constraints>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Web Storage &amp; Cookies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0gJ-9g-gIA">
                                <rect key="frame" x="77" y="180" width="317" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yg5-P0-zYN">
                                <rect key="frame" x="20" y="214" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Press to load the URL" identifier="btnLoadUrl" label="Load URL"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="cuZ-DH-IEu"/>
                                </constraints>
                                <state key="normal" title="To The Interwebs!"/>
                                <connections>
                                    <action selector="btnFetch:" destination="kjN-ha-yhK" eventType="touchUpInside" id="wIU-h9-sbH"/>
...
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFp-rr-HbY">
                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="kDG-ih-Hgt"/>
                                </constraints>
                                <items>
                                    <barButtonItem image="imageBack" style="plain" id="8jP-hQ-rN7">
                                        <connections>
                                            <action selector="btnBackClicked:" destination="RNV-yG-Zqg" id="6VL-Lb-G7V"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem width="24" style="plain" systemItem="fixedSpace" id="UGb-3m-6pE"/>
                                    <barButtonItem image="imageForward" style="plain" id="6Zj-P6-ZQm">
                                        <connections>
                                            <action selector="btnForwardClicked:" destination="RNV-yG-Zqg" id="VIG-ws-URL"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="QSw-FX-3rR"/>
                                    <barButtonItem systemItem="done" id="NcP-dV-t7s">
...
