...
        updateCookiesVisibility()
    }
    
    @IBAction func btnFetch(_ sender: AnyObject) {
        
        guard var strURL = txtURL.text else {
            showAlert(title: "Oops", message: "You should enter a URL first", buttonLabel: "My Bad!")
            return; //Do not continue with the transition
        }
        
        if strURL.isEmpty {
            showAlert(title: "Oops", message: "You should enter a URL first", buttonLabel: "My Bad!")
            return; //Do not continue with the transition
...
